--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -118,15 +118,15 @@ colors: *night-owl
 
 font:
   normal:
-    family: Fira Code
+    family: "FiraCode Nerd Font"
     style: Medium
   bold:
-    family: Fira Code
+    family: "FiraCode Nerd Font"
     style: Bold
   italic:
-    family: Fira Code
+    family: "FiraCode Nerd Font"
     style: Retina
   bold_italic:
-    family: Fira Code
+    family: "FiraCode Nerd Font"
     style: SemiBold
   size: 12.0
