--- a/config/tmuxp/climatesalad.yaml
+++ b/config/tmuxp/climatesalad.yaml
@@ -1,16 +1,27 @@
 session_name: climate-salad
 windows:
   - window_name: nvim
-    layout: tiled
+    layout: even-horizontal
+    options:
+      main-pane-width: 70
     shell_command_before:
       - cd ~/Code/climate-salad
     panes:
       - shell_command:
           - nvim
+      - shell_command:
+          - npm run dev
   - window_name: servers
     layout: tiled
     shell_command_before:
       - cd ~/Code/climate-salad
     panes:
       - shell_command:
-          - npm run dev
+          - cd ~/
+          - meilisearch
+      - shell_command:
+          - ngrok http --domain=solid-duck-honestly.ngrok-free.app 3000
+      - shell_command:
+          - npm run test
+      - shell_command:
+          - npm run test
