✨ feat: nvchad nvim setup

--- a/tmux.conf
+++ b/tmux.conf
@@ -20,7 +20,7 @@ set-window-option -g pane-base-index 1
 set -g renumber-windows on
 
 # soften status bar color from harsh green to light gray
-#set -g status-style bg='#666666',fg='#aaaaaa'
+# set -g status-style bg='#666666',fg='#aaaaaa'
 
 # remove administrative debris (session name, hostname, time) in status bar
 #set -g status-left ''
@@ -38,20 +38,24 @@ bind-key C-s send-prefix -2
 unbind-key C-z
 
 # Local config
-# if-shell "[ -f ~/.tmux.conf.local ]" 'source-file ~/.tmux.conf.local'
+ if-shell "[ -f ~/.tmux.conf.local ]" 'source-file ~/.tmux.conf.local'
 
-set -sg escape-time 0
-set allow-passthrough on
+set -g allow-passthrough on
 
 bind-key r source-file ~/.tmux.conf
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin '2kabhishek/tmux2k'
-set -g @tmux2k-show-powerline true
 set -g @tmux2k-left-plugins "git"
-set -g @tmux2k-right-plugins "cpu-usage ram-usage time"
+set -g @tmux2k-right-plugins "cpu ram ping"
 set-option -g status-position top
+#set -g @tmux2k-theme 'duo'
+set -g @tmux2k-bg-main "#011627"
+set -g @tmux2k-text "#d6deeb"
+set -g @tmux2k-icons-only true
 
 set -g @tpm-clean 'u'
+
+set -sg escape-time 0
 
 run '~/.tmux/plugins/tpm/tpm'
