--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -2,7 +2,7 @@ import = [
     "~/.config/alacritty/themes/themes/night_owl.toml"
 ]
 [font]
-normal = { family = "MonaspiceAr Nerd Font" }
+normal = { family = "JetBrainsMono Nerd Font Mono" }
 size = 12
 
 [env]
