--- a/tmux.conf
+++ b/tmux.conf
@@ -47,7 +47,8 @@ bind-key r source-file ~/.tmux.conf
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin '2kabhishek/tmux2k'
 set -g @tmux2k-left-plugins "git"
-set -g @tmux2k-right-plugins "cpu ram ping"
+set -g @tmux2k-right-plugins "cpu ram time"
+set -g @tmux2k-military-time true
 set-option -g status-position top
 #set -g @tmux2k-theme 'duo'
 set -g @tmux2k-bg-main "#011627"
